@@ -1,3 +1,8 @@
+[B]3.1.1 (14-Jan-2022)[/B]
+- Bug fixes
+- Change youtube ID
+- Remove WZRA KIDS 2
+
 [B]3.1.0 (04-Mar-2021)[/B]
 - Replaced artwork from "module" to a resource one
 
